PR c++/85600 - virtual delete failure.

* init.c (build_delete): Always save_expr when deleting.

From-SVN: r259913